[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/WorldComplete.gd" type="Script" id=1]
[ext_resource path="res://resources/mario-star-turtle-pixel-art-115632887918j8hdcjwei.png" type="Texture" id=2]
[ext_resource path="res://scenes/TransitionScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/sounds/level_complete.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=6]

[sub_resource type="Animation" id=7]
resource_name = "star"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ), Vector2( 0, 4 ), Vector2( 0, 2 ), Vector2( 0, 0 ) ]
}

[node name="WorldComplete" type="Area2D"]
script = ExtResource( 1 )

[node name="icon" type="Sprite" parent="."]
position = Vector2( 0, 1.16948 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.8147e-06, 0.157492 )
shape = SubResource( 6 )

[node name="TransitionScreen" parent="." instance=ExtResource( 3 )]

[node name="sound_complete" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "star"
anims/star = SubResource( 7 )
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
